--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ pandas
 numpy
 matplotlib
 sympy
-streamlit
 colorama
 reportlab
 openpyxl
@@ -14,4 +13,6 @@ folium
 streamlit-folium
 pdfplumber
 ezdxf
-altair<5
+streamlit>=1.22.0
+altair>=5
+
